# qwc-services-core

./: .coverage  .gitignore  MANIFEST.in  Makefile  README.md  conftest.py  pyproject.toml  setup.py
qwc_services_core/: __init__.py  api.py  api_test.py  app.py  app_test.py  auth.py  auth_test.py  cache.py  cache_test.py  config_models.py  config_models_test.py  database.py  database_test.py  jwt.py  jwt_test.py  permissions_reader.py  permissions_reader_test.py  runtime_config.py  runtime_config_test.py  tenant_handler.py  tenant_handler_test.py  translator.py  translator_test.py
qwc_services_core/models/: __init__.py  services_permissions.py  services_permissions_test.py  unified_permissions.py  unified_permissions_test.py
