[build-system]
requires = [
    "setuptools >=30.3", "wheel"
]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
testpaths = [
    "qwc_services_core",
]

[tool.isort]
skip = ["*_test.py", "test_*"]
profile = "black"
src_paths = "qwc_services_core"
known_first_party = "qwc_services_core"
